--- a/style/sandbox.css
+++ b/style/sandbox.css
@@ -102,7 +102,7 @@ body {
   flex: 1;
 
   /*min-width: 50%;*/
-  max-width: 900px;
+  max-width: 750px;
 
   padding-left: 5%;
   padding-right: 5%;
@@ -113,17 +113,11 @@ body {
 
 .header {
   flex-direction: column;
-
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .main {
   flex-direction: column;
   flex: 1;
-
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .footer {
@@ -142,8 +136,8 @@ body {
   display: flex;
   flex-direction: row;
 
-  margin-left: auto;
-  margin-right: auto;
+ /* margin-left: auto;
+  margin-right: auto;*/
 }
 
 .navlist {
